--- a/css/style.css
+++ b/css/style.css
@@ -2123,26 +2123,21 @@ ul.social_icon li a {
 
 /*------------------------register page--------------------------*/
 
-.signin{
+.centerreg{
 	height: 60vh;
 }
 
-.signin.centerreg{
+.centerreg{
 	position: absolute;
 	top: 10%;
-	left: 0%;
+	left: 60%;
 	transform: translate(-50%, -50%);
-	width: 500px;
+	width: 600px;
 	border-radius: 10px;
 }
 
-.centerreg h1{
-	text-align: center;
-	padding: 0 0 20px 0;
-}
-
 .centerreg form{
-	padding: 0 40px;
+	padding: 0 400px;
 	box-sizing: border-box;
 }
 
